# libpolycall-v1

./: CMakeLists.txt.unified  Dockerfile  Makefile  Polycallfile  README.md  build-windows.ps1
bindings/zig-polycall/: README.md  build.zig  build.zig.zon
bindings/zig-polycall/examples/: basic_client.zig
bindings/zig-polycall/src/: c.zig  core.zig  micro.zig  network.zig  protocol.zig  root.zig  state_machine.zig  types.zig
config/examples/: Polycallrc  Polycallrc.go  Polycallrc.java  Polycallrc.node  Polycallrc.python
docs/: CONFIGURATION_STANDARD.md
include/: network.h  polycall_config.h  polycall_pthread.h
scripts/: analyze_polycall.sh  release-libpolycall.sh  release.sh
src/: main.c  polycall.c  polycall_config.c  polycall_protocol.c  polycall_token.c
tools/: rollback.sh
v1/: .dockerignore  Dockerfile  Makefile  main.c
v2/: CMakeLists.txt  Makefile  fix_and_integrate.sh  polycall_repair.sh  polycall_repair_v2.sh
v2/docs/: module_registry.xml
v2/include/: network.h  polycall.h  polycall_parser.h
v2/include/libpolycall/core/: polycall.h  types.h
v2/include/libpolycall/feature-A/component-subset-1/: module-name-001.h  module-name-002.h
v2/include/libpolycall/feature-B/component-subset-1/: module-name-003.h
v2/include/libpolycall/feature-H/component-subset-1/: module-name-008.h
v2/include/libpolycall/feature-N/component-subset-1/: module-name-016.h
v2/include/libpolycall/micro/: polycall_micro.h
v2/libpolycall/: CMakeLists.txt  Makefile
v2/libpolycall/include/libpolycall/feature-A/component-subset-1/: module-name-001.h
v2/libpolycall/include/libpolycall/feature-B/component-subset-1/: module-name-003.h
v2/libpolycall/include/libpolycall/feature-H/component-subset-1/: module-name-008.h
v2/libpolycall/include/libpolycall/feature-N/component-subset-1/: module-name-016.h
v2/libpolycall/modules/feature-H/component-subset-1/: module-name-008.c
v2/libpolycall/namespace/src/: hash_table.c
v2/libpolycall/scripts/: final_fix.sh  fix_types.sh
v2/libpolycall/src/adapter/: CMakeLists.txt
v2/libpolycall/src/core/: nlm_altas_avl_huffman.c  polycall.c  state_machine.c  tokenizer.c
v2/libpolycall/src/hotwire/: CMakeLists.txt
v2/libpolycall/src/micro/: CMakeLists.txt
v2/libpolycall/src/nlm/: CMakeLists.txt
v2/libpolycall/src/socket/: CMakeLists.txt
v2/libpolycall/src/stream/: CMakeLists.txt
v2/libpolycall/src/zero/: CMakeLists.txt
v2/modules/feature-A/component-subset-1/: module-name-001.c  module-name-002.c
v2/modules/feature-B/component-subset-1/: module-name-003.c
v2/modules/feature-N/component-subset-1/: module-name-016.c
v2/scripts/: build.sh  generate_modules.sh
v2/scripts/legacy/: fix_build.sh  refactor.sh
v2/src/adapter/: CMakeLists.txt
v2/src/cli/: CMakeLists.txt
v2/src/core/: CMakeLists.txt  polycall.c
v2/src/core/micro/: polycall_banking_service.c
v2/src/micro/: polycall_banking_service.c
v2/src/nlm/: CMakeLists.txt
v2/src/socket/: CMakeLists.txt
v2/src/stream/: CMakeLists.txt
v2/src/zero/: CMakeLists.txt
